fix homepage spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -301,7 +301,7 @@ a {
     justify-content: flex-start;
     align-items: center;
 	padding: 1em 2em;
-	margin-top: 25vh;
+	margin-top: 26vh;
 	width: 100%;
 	height: 100%;
 }
@@ -338,7 +338,7 @@ a {
 .homepage-description {
 	text-align: center;
 	width: 25em;
-	margin-top: 14vh;
+	margin-top: 16vh;
 	margin-bottom: 3em;
 	padding-left: 2em;
 	padding-right: 2em;
